--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -510,6 +510,7 @@ div.tasks ul.documents li { list-style: none; }
 #taskProgress table { width: 100%; }
 #taskProgress table th { width: 150px; text-align: right; }
 
+a.button { color: white !important;}
 .button { 
     background-color: #0191C8;
     cursor: pointer;
@@ -527,14 +528,16 @@ div.tasks ul.documents li { list-style: none; }
 }
 .button.disabled, .button.disabled:hover {
 	background-color: #ccc;
-	color: #777;
+	color: #777 !important;
 	border-color: #777;
 	cursor: default;
 }
 .button:hover {
 	border: 1px solid #005B9A; 
 	background-color: #DCF0F7; 
-	font-weight: normal; color: #005B9A; outline: none;
+	font-weight: normal; 
+	color: #005B9A !important; 
+	outline: none;
 }
 	
 .button.warning {
@@ -568,3 +571,5 @@ div.annotation_browser table tr.annotation_set td { background: #ccc; font-weigh
     top: -1px;
     *overflow: hidden;
 }
+
+td.sort { text-align: right; }
