--- a/public_html/css/page_word_frequency.css
+++ b/public_html/css/page_word_frequency.css
@@ -7,3 +7,5 @@
 #countby { float: right; padding: 1px; color: white; }
 #countby a { color: #ddd; }
 #countby a.active { color: white; font-weight: bold; }
+
+div.filter { float: left; padding: 4px; line-height: 28px; }
