--- a/public_html/css/bootstrap_fix.css
+++ b/public_html/css/bootstrap_fix.css
@@ -33,6 +33,7 @@ nav .navbar{
 .navbar-sub.active { background: dodgerblue; color: white; }
 
 .tnav { margin: 3px; }
+
 .navbar-report{
     min-height: 20px;
     margin-left: 4px;
@@ -46,92 +47,74 @@ nav .navbar{
 .navbar-report ul {
     height: 30px !important;
 }
+
+
 .navbar-report {
-    background-color: #87b0ff;
-    border-color: #1c3598;
+    background-color: #00acd4;
+    border-color: #03cfff;
 }
 .navbar-report .navbar-brand {
-    color: #ecf0f1;
+    color: #fbfbfb;
 }
 .navbar-report .navbar-brand:hover,
 .navbar-report .navbar-brand:focus {
-    color: #ecdbff;
+    color: #007a97;
 }
 .navbar-report .navbar-text {
-    color: #ecf0f1;
+    color: #fbfbfb;
 }
 .navbar-report .navbar-nav > li > a {
-    color: #ecf0f1;
+    color: #fbfbfb;
 }
 .navbar-report .navbar-nav > li > a:hover,
 .navbar-report .navbar-nav > li > a:focus {
-    color: #ecdbff;
-}
-.navbar-report .navbar-nav > li > .dropdown-menu {
-    background-color: #87b0ff;
-}
-.navbar-report .navbar-nav > li > .dropdown-menu > li > a {
-    color: #ecf0f1;
-}
-.navbar-report .navbar-nav > li > .dropdown-menu > li > a:hover,
-.navbar-report .navbar-nav > li > .dropdown-menu > li > a:focus {
-    color: #ecdbff;
-    background-color: #1c3598;
-}
-.navbar-report .navbar-nav > li > .dropdown-menu > li > .divider {
-    background-color: #1c3598;
-}
-.navbar-report .navbar-nav .open .dropdown-menu > .active > a,
-.navbar-report .navbar-nav .open .dropdown-menu > .active > a:hover,
-.navbar-report .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #ecdbff;
-    background-color: #1c3598;
+    color: #007a97;
 }
 .navbar-report .navbar-nav > .active > a,
 .navbar-report .navbar-nav > .active > a:hover,
 .navbar-report .navbar-nav > .active > a:focus {
-    color: #ecdbff;
-    background-color: #1c3598;
+    color: #007a97;
+    background-color: #03cfff;
 }
 .navbar-report .navbar-nav > .open > a,
 .navbar-report .navbar-nav > .open > a:hover,
 .navbar-report .navbar-nav > .open > a:focus {
-    color: #ecdbff;
-    background-color: #1c3598;
+    color: #007a97;
+    background-color: #03cfff;
 }
 .navbar-report .navbar-toggle {
-    border-color: #1c3598;
+    border-color: #03cfff;
 }
 .navbar-report .navbar-toggle:hover,
 .navbar-report .navbar-toggle:focus {
-    background-color: #1c3598;
+    background-color: #03cfff;
 }
 .navbar-report .navbar-toggle .icon-bar {
-    background-color: #ecf0f1;
+    background-color: #fbfbfb;
 }
 .navbar-report .navbar-collapse,
 .navbar-report .navbar-form {
-    border-color: #ecf0f1;
+    border-color: #fbfbfb;
 }
 .navbar-report .navbar-link {
-    color: #ecf0f1;
+    color: #fbfbfb;
 }
 .navbar-report .navbar-link:hover {
-    color: #ecdbff;
+    color: #007a97;
 }
 
 @media (max-width: 767px) {
     .navbar-report .navbar-nav .open .dropdown-menu > li > a {
-        color: #ecf0f1;
+        color: #fbfbfb;
     }
     .navbar-report .navbar-nav .open .dropdown-menu > li > a:hover,
     .navbar-report .navbar-nav .open .dropdown-menu > li > a:focus {
-        color: #ecdbff;
+        color: #007a97;
     }
     .navbar-report .navbar-nav .open .dropdown-menu > .active > a,
     .navbar-report .navbar-nav .open .dropdown-menu > .active > a:hover,
     .navbar-report .navbar-nav .open .dropdown-menu > .active > a:focus {
-        color: #ecdbff;
-        background-color: #1c3598;
+        color: #007a97;
+        background-color: #03cfff;
     }
 }
