--- a/public_html/css/bootstrap_fix.css
+++ b/public_html/css/bootstrap_fix.css
@@ -3,6 +3,9 @@ h1 { font-size: 16px;}
 
 #page_content { margin: 0; padding: 0; border-width: 0; }
 
+.navbar-default { margin-bottom: 2px; }
+.pager li > a, .pager li > span { padding: 2px 10px; line-height: 12px; }
+
 nav .navbar{
     margin-bottom: 10px !important;
 }
