--- a/public_html/css/page_report.css
+++ b/public_html/css/page_report.css
@@ -21,4 +21,4 @@ span.highlight { background: #ff9; }
 #annotationLemmas .lemma_actions { text-align: center; }
 #annotationLemmas .lemma_status { text-align: center; }
 
-.contentBox, .contentBox h1, .contentBox h2, .contentBox h3 { font-size: 140%; }
+.contentBox, .contentBox h1, .contentBox h2, .contentBox h3 { }
