--- a/public_html/css/bootstrap_fix.css
+++ b/public_html/css/bootstrap_fix.css
@@ -1,7 +1,12 @@
 body { font-size: 12px; }
 h1 { font-size: 16px;}
 
-#page_content { margin: 0; padding: 0; border-width: 0; }
+#page .panel-heading { padding: 5px 10px; }
+#page .panel-body { padding: 10px; }
+#page .panel-footer { padding: 5px 10px; }
+#page .panel-title { font-size: 12px; }
+
+#page_content { margin: 0 auto; padding: 0; border-width: 0; }
 
 .navbar-default { margin-bottom: 2px; }
 .pager li > a, .pager li > span { padding: 2px 10px; line-height: 12px; }
