--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -209,8 +209,8 @@ table#report th { color: grey; font-size: 10px; vertical-align: top; width: 40px
 
 /* Stany elementów */
 
-.hightlighted, .highlighted { background: yellow !important; }
-.hightlighted td, .highlighted td { background: yellow !important; }
+.hightlighted, .highlighted { background: #d9edf7 !important; }
+.hightlighted td, .highlighted td { background: #d9edf7 !important; }
 
 .selected { background: red !important; }
 .selected td { background: red !important; }
@@ -341,10 +341,19 @@ table#annmap .empty2 { background: #fdf; }
 
 /*Event editor*/
 .tableContent {
-	width:100%;
-	height:300px;	
+    height: 184px;
 	overflow:auto;
 }
+
+.bigTableContent {
+    height:485px;
+    overflow:auto;
+}
+
+.adminPanelButton{
+    width: 65px;
+}
+
 
 .tableContainer{
 	margin:5px;	
@@ -393,6 +402,7 @@ table#annmap .empty2 { background: #fdf; }
 .sensItemEdit{
 	cursor:pointer;
 	float: right;
+    width: 120px;
 	color: #5E5F5B;
 	padding: 10px 2px 10px 25px;
 }
@@ -476,6 +486,11 @@ body div sentence.lemmatize input{
 }
 body div sentence.lemmatize td.lemma_status{
 	margin:0;padding:0;
+}
+
+.panel-administration{
+    height: 30px;
+    padding: 0 !important;
 }
 
 
@@ -592,3 +607,18 @@ div.annotation_browser table tr.annotation_set td { background: #ccc; font-weigh
 td.sort { text-align: right; }
 
 .scrolling { overflow-y: auto; }
+
+.column_id {
+    color: grey;
+}
+
+.admin_tables {
+    width: 80%;
+    margin-left: 15px;
+    margin-bottom: 4%;
+}
+
+.sensList{
+    overflow: auto;
+    height: 500px;
+}
