--- a/public_html/css/page_report_annotator.css
+++ b/public_html/css/page_report_annotator.css
@@ -1,3 +1,5 @@
 span.annotation.new-relation-target { cursor: crosshair; border-color: red; border-style: solid; }
 
 .relation-types .dropdown-menu { height: 400px; overflow: auto; }
+
+.annotation-type-tree .popover-content { overflow: auto; height: 400px; }
