Przypisywanie zbiorów anotacji do korpusu.

--- a/public_html/css/page_corpus.css
+++ b/public_html/css/page_corpus.css
@@ -8,3 +8,5 @@
 #predefined-styles span, #annotation-style-preview {
 	padding: 2px;
 }
+
+tr.hightlighted td.selected { background: #9DD943 !important; }
