added gui options for page_test_ctag

--- a/public_html/css/page_test_ctag.css
+++ b/public_html/css/page_test_ctag.css
@@ -2,3 +2,11 @@
     color: #006bff;
     font-style: italic;
 }
+
+.token-tagger-glyph{
+    font-size: 1.2em;
+}
+
+.token-tagger-btn{
+    width: 49%;
+}
