saving user morphological disamb to db

--- a/public_html/css/page_report_morphodisamb.css
+++ b/public_html/css/page_report_morphodisamb.css
@@ -114,9 +114,15 @@
     position: relative;
 }
 
-#morpho-tagger.loading .card-loading.token-card-content::after{
-    content:"saving";
-    display: block;
+#morpho-tagger .card-loading.token-card-content::after{
+    content:"Saving...";
+    font-size: 1.5em;
+    color: #fff;
+    border-radius: 5px;
+    text-align: center;
+    align-items: center;
+    display: flex;
+    justify-content: center;
     height: 100%;
     position: absolute;
     top: 0;
