#8076 statystyki aktywnosci uzytkownikow

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -727,3 +727,18 @@ select.error, textarea.error, input.error{
     max-height: 60px;
     max-width: 500px;
 }
+
+.loader {
+    margin: 0 auto;
+    border: 16px solid #f3f3f3; /* Light grey */
+    border-top: 16px solid black; /* Blue */
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
