morpho disamb with inserting only user decision divergent from tagger decision

--- a/public_html/css/page_report_morphodisamb.css
+++ b/public_html/css/page_report_morphodisamb.css
@@ -172,6 +172,15 @@
     display: block;
     min-width: 70px;
 }
+.tag-base .glyphicon{
+    color: #a8a8a8;
+    padding-right: 3px;
+    display:none;
+}
+
+.selected .tag-base .glyphicon-ok-sign{
+    display: inline;
+}
 
 .btn-side-morpho{
     width: 100%;
