--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -742,3 +742,8 @@ select.error, textarea.error, input.error{
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
 }
+
+.chart_button{
+    float: right;
+    margin-top: 10px;
+}
