--- a/public_html/css/page_report_morphodisamb.css
+++ b/public_html/css/page_report_morphodisamb.css
@@ -166,7 +166,7 @@
 }
 
 .token-card-content ul.possible-tags-list li.selected.focused{
-    background-color: rgba(45, 100, 255, 0.7) !important;
+    background-color: rgba(45, 100, 255, 0.7); !important;
 }
 
 .tag-base{
@@ -202,4 +202,28 @@
 
 .token{
     cursor: pointer;
+}
+
+[data-module-id="overlay"]{
+    position: absolute;
+    display: none; /* Hidden by default */
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.7);
+    z-index: 2;
+    border-radius: 3px;
+}
+
+[data-module-id="overlay"] p {
+    font-size: 2em;
+    color: #fff;
+    z-index: 3;
+    text-align: center;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
 }
