--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -343,6 +343,10 @@ table#annmap .empty2 { background: #fdf; }
 	padding: 1px;
 }
 
+#relation_layers td {
+    padding: 1px;
+}
+
 
 .setContainer, .subsetContainer, .typeContainer {
 	padding:10px;	
