--- a/public_html/css/page_report_morphodisamb.css
+++ b/public_html/css/page_report_morphodisamb.css
@@ -152,6 +152,40 @@ span.token-tagger-active{
     padding: 2px;
     margin: 2px 0;
     min-height: 23px;
+
+}
+
+.morpho-tagger-agreement  .token-card-content ul.possible-tags-list li{
+    height: 40px;
+    overflow: hidden;
+    text-align: center;
+    display: block;
+    width: 100%;
+    vertical-align: middle;
+}
+.morpho-tagger-agreement .card-main > .token-card-content ul.possible-tags-list li{
+    padding: 3px 6px;
+    margin: 2px 0;
+    /*text-align: left;*/
+}
+
+.morpho-tagger-agreement .token-card-content ul{
+    list-style-type: none;
+    padding-left:0;
+}
+
+.morpho-tagger-agreement .token-card-content ul.possible-tags-list li{
+    background-color: #ccc;
+    padding: 2px;
+    margin: 2px 0;
+    /*min-height: 23px;*/
+    height: 40px;
+    overflow: hidden;
+    text-align: center;
+    display: block;
+    width: 100%;
+    vertical-align: middle;
+    position: relative;
 }
 
 .token-card-content .btn{
@@ -170,17 +204,31 @@ span.token-tagger-active{
 
 .tag-base{
     float: left;
-    display: block;
-    min-width: 70px;
+    font-weight: 700;
 }
-.tag-base .glyphicon{
+.morpho-tagger-agreement .tag-base{
+    float: unset;
+    display: block;
+    position: relative;
+    z-index: 2;
+}
+.glyphicon{
     color: #a8a8a8;
-    padding-right: 3px;
+    padding-right: 8px;
     display:none;
 }
 
-.selected .tag-base .glyphicon-ok-sign{
-    display: inline;
+.morpho-tagger-agreement .glyphicon{
+    padding: 0;
+    margin-right: -10px;
+    position: absolute;
+    top: 5px;
+    left: 3px;
+}
+
+.selected .glyphicon-ok-sign{
+    display: unset;
+    float:left;
 }
 
 .btn-side-morpho{
