--- a/public_html/css/annotations.css
+++ b/public_html/css/annotations.css
@@ -5,7 +5,7 @@
 .annotations span { 
 	border: 1px solid #F26C4F; 
 	border-bottom-width: 2px; 
-	display: inline-table; 
+	display: inline-block;
 	margin-bottom: 0px; 
 	position: relative; 
 	background-color: #FDC68A;
@@ -20,7 +20,7 @@ xyz {
 	position: relative;   
 }
 
-.annotations span span { margin: 0 0 2px 0; padding: 0px;}
+.annotations span span { margin: 2px 0; padding: 2px 1px;}
 
 /*relations  */
 span.relationAvailable{
