--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -772,3 +772,9 @@ select.error, textarea.error, input.error{
 .li_error{
     padding: 10px;
 }
+
+table.relation_tree { border: 1px solid #ddd; }
+table.relation_tree tr td { padding: 0; margin: 0; font-weight: bold !important;}
+table.relation_tree tr.relationLayerRow td { background: white !important; }
+table.relation_tree tr.relationSublayerRow td { border-top: 1px dashed #aaa }
+table.relation_tree tr.relationSublayerRow td { background: white !important; }
