Changes in access management WIP

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -18,6 +18,8 @@ body { font-family: "Helvetica Neue",Helvetica,Arial,sans-serif; font-size: 12px
 
 p { margin: 0px; }
 
+.nav_corpus_pages span.glyphicon {margin-right: 10px;}
+
 #table td { padding: 0px 5px; }
 #table th { padding: 0px 10px; }
 table tr.even td { background: #eee; }
