Update corpus pages

--- a/public_html/css/styles.css
+++ b/public_html/css/styles.css
@@ -812,3 +812,7 @@ div.about pre {
 	padding: 10px;
 	white-space: pre-wrap
 }
+
+li.nav_corpus_pages > a.dropdown-toggle .glyphicon {
+	color: #888;
+}
