--- a/public_html/css/page_report_transcription.css
+++ b/public_html/css/page_report_transcription.css
@@ -65,6 +65,8 @@ span.ajax_inline_status .time { font-weight: normal; font-size: 0.8em; margin: 0
 
 #elements_sections .ui-tabs-nav li a { padding: 0.5em; !important }
 
+#elements_sections .tab-pane { padding: 10px;  }
+
 .p_place { background: #999; margin: 5px; margin-left: 15px; }
 .p_place td { background: white; text-align: center; padding: 3px; }
 .p_place td a { background: white; margin: 0px; }
