--- a/public_html/css/page.css
+++ b/public_html/css/page.css
@@ -188,7 +188,7 @@ display:block;
 #page_content {
 	background: white;
 	padding-bottom: 5px;
-	width: 99%;
+	width: 98%;
 	margin: auto;
 }
 #page_content.no_padding{
@@ -262,12 +262,13 @@ td.col-num, th.col-num { width: 15px; text-align: right; }
  * Powtarzalne elementy strony
  */
 /* Boks z opcjami filtru jednej własności */
-.filter_box { margin-top: 2px; }
+.filter_box { margin-top: 2px; margin-bottom: 5px; padding-bottom: 5px;}
+.filter_box .header {background: #eee; padding: 2px 5px; }
 .filter_box h2 { background: white; border: 1px solid #ccc; border-bottom: 1px solid #888; margin-left: 0px; margin-right: 0px; padding: 0px 1px; color: grey; margin-bottom: 0px; font-size: 12px; }
 .filter_box h2.active { color: black; }
 .filter_box small.toggle { float: right; margin-top: 3px; margin-right: 2px; }
 .filter_box a.cancel { color: red; }
-.filter_box ul { margin: 0; padding: 0; }
+.filter_box ul { margin: 0; padding: 0; padding-left: 5px; }
 .filter_box ul li { border-bottom: 1px dashed #ccc; margin: 0; margin-left: 10px; }
 .filter_box .num { float: right; }
 .filter_box div { background: white; padding: 2px; }
