Extended annotation attribute value selector

--- a/public_html/css/page_report_annotator.css
+++ b/public_html/css/page_report_annotator.css
@@ -3,3 +3,5 @@ span.annotation.new-relation-target { cursor: crosshair; border-color: red; bord
 .relation-types .dropdown-menu { height: 400px; overflow: auto; }
 
 .annotation-type-tree .popover-content { overflow: auto; height: 400px; }
+
+.select-enum-option span { width: 100px; color: dodgerblue}
