--- a/public_html/css/page_report_annotator.css
+++ b/public_html/css/page_report_annotator.css
@@ -5,3 +5,5 @@ span.annotation.new-relation-target { cursor: crosshair; border-color: red; bord
 .annotation-type-tree .popover-content { overflow: auto; height: 400px; }
 
 .select-enum-option span { width: 100px; color: dodgerblue}
+
+tr.modified td {background: lightsteelblue; }
