--- a/public_html/css/page_report_annotation_attributes.css
+++ b/public_html/css/page_report_annotation_attributes.css
@@ -3,3 +3,5 @@ tr.attribute td.status { text-align: center; width: 70px; }
 tr.attribute td.actions { text-align: center; width: 40px; }
 
 button#save_all { float: right; }
+
+.select2-container--default .select2-selection--single .select2-selection__placeholder { background: yellow; }
