--- a/public_html/css/page_report_annotator.css
+++ b/public_html/css/page_report_annotator.css
@@ -7,3 +7,10 @@ span.annotation.new-relation-target { cursor: crosshair; border-color: red; bord
 .select-enum-option span { width: 100px; color: dodgerblue}
 
 tr.modified td {background: lightsteelblue; }
+
+#annotationList td.icons { width: 70px; text-align: right; }
+#annotationList .hoverIcons { display: none; }
+#annotationList span { background: transparent; border-width: 0; }
+
+.range { text-align: center; }
+.annotationDelete { color: red; }
